# Env_isage

./: .gitignore  MANIFEST.in  README.md  connection_disk_linux.sh  connection_disk_mac.zsh  connection_disk_windows.ps1  environment.yml  linux_initialisation.sh  mac_initialisation.zsh  main.py  pyproject.toml  windows_initialisation.ps1
algorithme_genetique/: al_matrice.py  main_algorithme_genetique.py
autoencodeur/: dataset_filtering.py  encoder_epoch_30.pth  vae.py  vae_plot.py
docs/source/: Installation.rst  Modules.rst  al_matrice.rst  conf.py  index.rst  main_autoencodeur.rst  main_interface_graphique.rst  share.rst  vae_plot.rst
interface_graphique/: images  interface_graphique.py  test6.py
models/: algorithm_genetique.py
src/: __init__.py  main.py  share.py
src/algorithme_genetique/: al_matrice.py
src/autoencodeur/: dataset_filtering.py  decoder_epoch_30.pth  test_vae.ipynb  vae.py  vae_plot.py  vae_training.ipynb
src/interface_graphique/: interface_graphique.py  interface_graphique_tuto.py  main_interface_graphique.py  test2.py  test3.py  test4.py  test7.py  test8.py  test_10.py
src/projet_4bim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tmp/: dict_vect.txt
