[project]
name = "Envisage"
version = "0.0.1"
authors = [
  { name="Lilian Guitart Arnau", email="lilian.guitart-arnau@insa-lyon.fr" },
  { name="Maele Bedel", email="maele.bedel@insa-lyon.fr" },
  { name="Hieu Minh Dang", email="hieu-minh.dang@insa-lyon.fr" },
  { name="Gautier Dupont-Burette", email="gautier.dupont-burette@insa-lyon.fr" },
  { name="Laura Forestier", email="laura.forestier@insa-lyon.fr" },
  { name="Elisa Afonso", email="elisa.afonso@insa-lyon.fr" },
]
description = "School project to generate robot portrait"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitlab.insa-lyon.fr/gdupontbur/projet-4bim"

[tool.setuptools]
packages = ["src","src.algorithme_genetique","src.interface_graphique"]
include-package-data = true


[project.scripts]
envisage = "src.main:main"

